lib/wool/annotation_parser/annotations.treetop
module Wool
  module Parsers
    grammar Annotation
      include Class
      include Structural
      include GeneralPurpose

      rule root
        space* type space* {
          def constraints
            elements[1].constraints
          end
        }
      end

      rule type
        (top / self_type / class_based_constraint / structural_constraint)
      end

      rule top
        "Top" {
          def constraints
            []
          end
        }
      end

      rule self_type
        "self" {
          def constraints
            [Types::SelfTypeConstraint.new]
          end
        }
      end
    end
  end
end
